# ivory_wallpaper

./: Cargo.toml  README.md  index.html  script.js  styles.css
src/: main.rs  native_bridge.rs  startup.rs  webview_store.rs  workerw.rs
web/: native-bridge.js  startup-settings.js
