[package]
name = "ivory_wallpaper_runtime"
version = "0.1.0"
edition = "2024"
description = "Rust runtime that renders local HTML wallpaper content."

[dependencies]
anyhow = "1.0.102"
tao = "0.35.0"
url = "2.5.7"
wry = "0.55.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
